# Cough_Disease_Detector_POC

./: README.md  docker-compose.yml
cough_disease_backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cough_disease_backend/app/: __init__.py  main.py
cough_disease_backend/app/api/: __init__.py  dependencies.py
cough_disease_backend/app/api/routes/: inference.py
cough_disease_backend/app/core/: config.py  logging.py
cough_disease_backend/app/models/: loader.py  predictor.py
cough_disease_backend/app/services/: inference_service.py  schemas.py
cough_disease_backend/app/utils/: audio.py  filesystem.py
cough_disease_backend/docs/: INTEGRATION.md
cough_disease_backend/models/: README.md
cough_disease_backend/scripts/: run_dev.sh
cough_disease_detector/: .gitignore  README.md  config.py  convert_webm_to_wav.py  data_loader.py  inference.py  losses.py  models.py  pytorch_utils.py  requirements.txt  staged_training.py  test_pipeline.py  trainer.py  unified_data_processor.py
cough_disease_ui_pro/: .dockerignore  App.tsx  Dockerfile  README.md  app.json  package.json  tsconfig.json
cough_disease_ui_pro/components/: LoaderOverlay.tsx  ProbabilityChart.tsx  RecordButton.tsx  ResultCard.tsx
cough_disease_ui_pro/utils/: api.ts  time.ts
