[project]
name = "cough-disease-backend"
version = "0.1.0"
description = "FastAPI backend for cough disease audio inference"
authors = [
  { name = "EXUS 500 Team10", email = "team10@mail.mcgill.ca" }
]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.112,<0.113",
  "uvicorn[standard]>=0.30,<0.31",
  "python-multipart>=0.0.9,<0.0.10",
  "pydantic-settings>=2.3,<2.4",
  "loguru>=0.7,<0.8",
  "soundfile>=0.12,<0.13",
  "numpy>=1.26,<2.0",
  "torch>=2.2,<3.0",
  "torchaudio>=2.2,<3.0",
  "torchlibrosa>=0.1.0,<0.2.0"
]

[project.optional-dependencies]
dev = ["black>=24.3,<25", "ruff>=0.5,<0.6", "mypy>=1.9,<1.11"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py39"
